Update and rename Index.html to index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>فهرست پروژه‌ها —  استاتیک</title>
+  <title>فهرست پروژه‌ها </title>
   <style>
     /* ظاهر گیمینگ نئونی — راست‌چین */
     :root{
